# popsynth

./: .buildinfo  .dir-locals.el  .envrc  .flake8  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  codecov.yml  genindex.html  index.html  logo.key  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: API.doctree  modules.doctree  popsynth.aux_samplers.delta_aux_sampler.doctree  popsynth.aux_samplers.doctree  popsynth.aux_samplers.lognormal_aux_sampler.doctree  popsynth.aux_samplers.normal_aux_sampler.doctree  popsynth.aux_samplers.plaw_aux_sampler.doctree  popsynth.aux_samplers.sky_sampler.doctree  popsynth.aux_samplers.trunc_normal_aux_sampler.doctree  popsynth.aux_samplers.viewing_angle_sampler.doctree  popsynth.auxiliary_sampler.doctree  popsynth.distribution.doctree  popsynth.distributions.bpl_distribution.doctree  popsynth.distributions.cosmological_distribution.doctree  popsynth.distributions.delta_distribution.doctree  popsynth.distributions.doctree  popsynth.distributions.flatland_distribution.doctree  (+34 more)
_modules/: index.html
_sources/: index.rst.txt
api/: API.html  modules.html  popsynth.aux_samplers.delta_aux_sampler.html  popsynth.aux_samplers.html  popsynth.aux_samplers.lognormal_aux_sampler.html  popsynth.aux_samplers.normal_aux_sampler.html  popsynth.aux_samplers.plaw_aux_sampler.html  popsynth.aux_samplers.sky_sampler.html  popsynth.aux_samplers.trunc_normal_aux_sampler.html  popsynth.aux_samplers.viewing_angle_sampler.html  popsynth.auxiliary_sampler.html  popsynth.distribution.html  popsynth.distributions.bpl_distribution.html  popsynth.distributions.cosmological_distribution.html  popsynth.distributions.delta_distribution.html  popsynth.distributions.flatland_distribution.html  popsynth.distributions.html  popsynth.distributions.log10_normal_distribution.html  popsynth.distributions.log_normal_distribution.html  popsynth.distributions.pareto_distribution.html  popsynth.distributions.schechter_distribution.html  popsynth.distributions.spherical_distribution.html  popsynth.distributions.spiral_galaxy_distribution.html  popsynth.distributions.uniform_distribution.html  popsynth.html  popsynth.population.html  popsynth.population_synth.html  popsynth.populations.bpl_population.html  popsynth.populations.html  popsynth.populations.lognormal_population.html  popsynth.populations.pareto_populations.html  popsynth.populations.schechter_populations.html  popsynth.populations.spatial_populations.html  popsynth.selection_probability.flux_selectors.html  popsynth.selection_probability.generic_selectors.html  popsynth.selection_probability.html  popsynth.selection_probability.selection_probability.html  popsynth.selection_probability.spatial_selection.html  popsynth.simulated_variable.html  popsynth.utils.array_to_cmap.html  (+11 more)
docs/: .readthedocs.yml  conf.py  index.rst  requirements.txt
examples/: demo.ipynb
md/: custom.md  milkyway.md  selections.md
notebooks/: aux.html  aux.ipynb  bl_lacs.html  concept.html  concept.ipynb  contribute.html  contribute.ipynb  custom.html  custom.ipynb  distributions.html  installation.html  milkyway.html  milkyway.ipynb  quickstart.html  quickstart.ipynb  selections.html  selections.ipynb  short_grbs.html  short_grbs.ipynb  stellar_mass.html  stellar_mass.ipynb
popsynth/: __init__.py  __version__.py  _version.py  auxiliary_sampler.py  cosmological_population.py  distribution.py  log_normal_population.py  pareto_population.py  population.py  population_synth.py  schechter_population.py  selection_probability.py  simulated_variable.py  spherical_population.py  stan_generator.py  synths.py  tree.py  types.py
(+251 files in other folders)
